--- a/index.html
+++ b/index.html
@@ -293,12 +293,15 @@ for (let i = 0; i < elements.length; i++) {
     elements[i].classList.remove('active');
     elements[i].onclick = function (event) {
         //remove all active class
-        removeClass();
-        
-        this.classList.add("active");
-        let offer = elements[i].nextSibling.nextSibling;
-        offer.style.height = 'auto';
-        console.log(this);
+        if(this.classList.contains('active')){
+            this.classList.remove('active')
+            this.nextSibling.nextSibling.style.height = '0';
+        } else {
+            removeClass();
+            this.classList.add("active");
+            let offer = elements[i].nextSibling.nextSibling;
+            offer.style.height = 'auto';
+        }
     }
     elements[0].classList.add("active");
 }
