--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <span class='offerTitle arrow'>&#8681;</span>
             </div>
             <section class='lOffer'>
-                <section class='test'>
+                <section class='main'>
                     <figure class='lifeImg'>
                         <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                             alt="car">
@@ -47,7 +47,7 @@
                     </article>
                     
                 </section>
-                <section class='test'>
+                <section class='main'>
                     <figure class='lifeImg'>
                         <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                             alt="car">
@@ -87,7 +87,7 @@
                 <span class='offerTitle arrow'>&#8681;</span>
             </div>
             <section class='aOffer'>
-                <section class='test'>
+                <section class='main'>
                     <figure class='lifeImg'>
                         <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                             alt="car">
@@ -126,7 +126,7 @@
                 <span class='offerTitle arrow'>&#8681;</span>
             </div>
             <section class='cOffer'>
-                <section class='test'>
+                <section class='main'>
                     <figure class='lifeImg'>
                         <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                             alt="car">
@@ -157,7 +157,7 @@
                             Vehicle Images are for illustration purposes only and may not match the exact trim and/or offer. Please see offer details for more information, and confirm all offers in writing with dealer representative</p>
                     </article>
                     </section>
-                    <section class='test'>
+                    <section class='main'>
                         <figure class='lifeImg'>
                             <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                                 alt="car">
@@ -188,7 +188,7 @@
                                 Vehicle Images are for illustration purposes only and may not match the exact trim and/or offer. Please see offer details for more information, and confirm all offers in writing with dealer representative</p>
                         </article>
                         </section>
-                        <section class='test'>
+                        <section class='main'>
                             <figure class='lifeImg'>
                                 <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                                     alt="car">
@@ -219,7 +219,7 @@
                                     Vehicle Images are for illustration purposes only and may not match the exact trim and/or offer. Please see offer details for more information, and confirm all offers in writing with dealer representative</p>
                             </article>
                             </section>
-                            <section class='test'>
+                            <section class='main'>
                                 <figure class='lifeImg'>
                                     <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                                         alt="car">
@@ -250,7 +250,7 @@
                                         Vehicle Images are for illustration purposes only and may not match the exact trim and/or offer. Please see offer details for more information, and confirm all offers in writing with dealer representative</p>
                                 </article>
                                 </section>
-                                <section class='test'>
+                                <section class='main'>
                                     <figure class='lifeImg'>
                                         <img  src="https://cdn-ds.com/blogs-media/sites/130/2016/06/18125251/Official-2016-Toyota-Camry-Trim-Levels-and-Prices_o.jpg"
                                             alt="car">
