--- a/index.html
+++ b/index.html
@@ -287,9 +287,12 @@
     </section>
 </body>
 <script>
+
+    
 let elements = document.getElementsByClassName('container');
 let disclaimers = document.getElementsByClassName('disLink');
-let hideDisclaimer = document.getElementsByClassName('disclaimer')
+let hideDisclaimer = document.getElementsByClassName('disclaimer');
+
 for (let i = 0; i < elements.length; i++) {
     elements[i].classList.remove('active');
     elements[i].onclick = function (event) {
@@ -307,6 +310,8 @@ for (let i = 0; i < elements.length; i++) {
     elements[0].classList.add("active");
 }
 
+
+
 function removeClass(){
   for (let i = 0; i < elements.length; i++) {
     elements[i].classList.remove('active');
@@ -314,6 +319,8 @@ function removeClass(){
     offer.style.height = '0';
   }
 }
+
+
 
 for (let i = 0; i < disclaimers.length; i++) {
     hideDisclaimer[i].classList.remove('activeDisclaimer');
@@ -330,6 +337,8 @@ for (let i = 0; i < disclaimers.length; i++) {
         }
     }
 }
+
+
 
 
 function removeDisclaimer(){
